--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>We are the world's largest University</h1>
+                <h1>DIU Playground Management System</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus est vitae labore non quaerat maxime assumenda quibusdam excepturi incidunt tempora culpa cupiditate rem odio quidem cumque minima autem, illo eaque.</p>
                 <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
             </div>
             <div class="about-col">
-                <img src="./about.jpg">
+                <img src="./about-us-plain.jpg">
             </div>
         </div>
     </section>
