--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="./login.html">APPLY</a></li>                
+                    <!-- <li><a href="./surveyfree.html">APPLY</a></li>                 -->
+                    <li><a href="./surveyfree.html">APPLY</a></li>                
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="login.html">SIGN IN</a></li>
+                    <li><a href="./login.html">SIGN IN</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -65,13 +66,13 @@
                 </div>
             </div>
             <div class="campus-col">
-                <img src="./newyork.png">
+                <img src="photo20221112213230502x711.jpg">
                 <div class="layer">
                     <h3>Practice Field</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="./washington.png">
+                <img src="photo20221112213230502x711.jpg">
                 <div class="layer">
                     <h3>Basketball Ground</h3>
                 </div>
@@ -84,17 +85,17 @@
         <p>This is our facilities</p>
         <div class="row">
             <div class="facilities-col">
-                <img src="library.png">
+                <img src="./rsz_annie-spratt-im8y4bo2hso-unsplash1.jpg">
                 <h3>Center Field</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab quaerat totam quae alias illum sunt aliquam laboriosam voluptatum, nobis unde voluptatibus quo rerum, ipsa asperiores veritatis? Voluptate consequuntur aspernatur expedita?</p>
             </div>
             <div class="facilities-col">
-                <img src="./basketball.png">
+                <img src="./rsz_annie-spratt-im8y4bo2hso-unsplash1.jpg">
                 <h3>Practice Field</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab quaerat totam quae alias illum sunt aliquam laboriosam voluptatum, nobis unde voluptatibus quo rerum, ipsa asperiores veritatis? Voluptate consequuntur aspernatur expedita?</p>
             </div>
             <div class="facilities-col">
-                <img src="./cafeteria.png">
+                <img src="./rsz_annie-spratt-im8y4bo2hso-unsplash1.jpg">
                 <h3>Basketball Ground</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab quaerat totam quae alias illum sunt aliquam laboriosam voluptatum, nobis unde voluptatibus quo rerum, ipsa asperiores veritatis? Voluptate consequuntur aspernatur expedita?</p>
             </div>
