--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">APPLY</a></li>
+                    <li><a href="./surveyfree.html">APPLY</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href=".html">SIGN IN</a></li>
+                    <li><a href="./login.html">SIGN IN</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
